# talk-with-sqlite-poc

./: .gitignore  Makefile  README.md  helpers.py  prompts.py  pyproject.toml  text_to_code.py  text_to_sql.py  text_to_sql_prompt.py
dbs/db1/: db1_schema.md
dbs/db2/: db2_schema.md
dbs/db3/: db3_schema.md
evaluation_notes/text_to_code/: questions_for_text_to_code.md
evaluation_notes/text_to_sql/: db1_eval_checklist.md  db2_eval_checklist.md  db3_eval_checklist.md  questions_for_text_to_sql_task.md
