[project]
name = "talk-with-sqlite-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.55",
    "ruff>=0.11.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
